--- a/LogTimelineTracker/LogTimelineTracker.csproj
+++ b/LogTimelineTracker/LogTimelineTracker.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tracker\TrackerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tracker\TrackerForm.Designer.cs">
+      <DependentUpon>TrackerForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
