로그파일 읽어들이는 기능

--- a/LogTimelineTracker/LogTimelineTracker.csproj
+++ b/LogTimelineTracker/LogTimelineTracker.csproj
@@ -79,6 +79,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Tracker\TrackerForm.resx">
+      <DependentUpon>TrackerForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
